// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PsammeadBulletedList should render correctly from ltr 1`] = `
.c0 {
  font-size: 0.9375rem;
  line-height: 1.25rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  margin-top: 0;
  list-style-type: none;
}

.c0 > li {
  position: relative;
}

.c0 > li::before {
  top: 0.5rem;
  content: ' ';
  position: absolute;
  border-width: 1rem;
  border: 0.1875rem solid #3F3F42;
  border-radius: 50%;
  left: -1rem;
}

.c1 {
  margin-bottom: 1rem;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c0 {
    font-size: 1rem;
    line-height: 1.375rem;
  }
}

@media (min-width:37.5rem) {
  .c0 {
    font-size: 1rem;
    line-height: 1.375rem;
  }
}

<ul
  class="c0"
  dir="ltr"
  role="list"
>
  <li
    class="c1"
    role="listitem"
  >
    First item on the list
  </li>
  <li
    class="c1"
    role="listitem"
  >
    Second item on the list
  </li>
  <li
    class="c1"
    role="listitem"
  >
    Final list item
  </li>
</ul>
`;

exports[`PsammeadBulletedList should render correctly from rtl 1`] = `
.c0 {
  font-size: 1.125rem;
  line-height: 1.75rem;
  font-family: "BBC Nassim Arabic",Arial,Verdana,Geneva,Helvetica,sans-serif;
  font-weight: 400;
  font-style: normal;
  margin-top: 0;
  list-style-type: none;
}

.c0 > li {
  position: relative;
}

.c0 > li::before {
  top: 0.5rem;
  content: ' ';
  position: absolute;
  border-width: 1rem;
  border: 0.1875rem solid #3F3F42;
  border-radius: 50%;
  right: -1rem;
}

.c1 {
  margin-bottom: 1rem;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c0 {
    font-size: 1.375rem;
    line-height: 2rem;
  }
}

@media (min-width:37.5rem) {
  .c0 {
    font-size: 1.375rem;
    line-height: 2rem;
  }
}

<ul
  class="c0"
  dir="rtl"
  role="list"
>
  <li
    class="c1"
    role="listitem"
  >
    العنصر الأول في القائمة
  </li>
  <li
    class="c1"
    role="listitem"
  >
    البند الثاني في القائمة
  </li>
  <li
    class="c1"
    role="listitem"
  >
    عنصر القائمة النهائية
  </li>
</ul>
`;
